# idris-jvm

./: .editorconfig  .gitignore  .travis.yml  BUILD.md  LICENSE  Makefile  README.md  idris-jvm.cabal  idris-jvm.cabal.template  idris2.ipkg  idris2api.ipkg  install.sh  pom.xml  settings.xml  stack.yaml
.github/linters/: sun_checks.xml
.github/workflows/: ci-sphinx.yml  ci-super-linter.yml  install.yml  pre-release.yml  release.yml
app/: Main.hs
benchmark/jmh/: .gitignore  README.md  benchmark.ipkg  compare.sh  pom.xml  run.sh
benchmark/jmh/main.BenchmarkMain.matMul-Throughput/: profile.jfr
benchmark/jmh/main.BenchmarkMain.sievePrimes-Throughput/: profile.jfr
benchmark/jmh/results/: baseline.json  baseline.txt  mono-hof2.json  mono-hof2.txt  mono-hof3.json  mono-hof3.txt  mono-matmul.jfr  mono.json  mono.txt
cbits/: asm.cc
compiler/: pom.xml
compiler/src/assembly/: bin.xml
docs/: compiling-idris-without-main-module.md  conf.py  faq.md  index.rst  monomorphization-design.md  recursive-slots-synthetic-shapes.md  setup.md  windows.md
docs/ffi/: calling-idris-from-java.rst  calling-java-from-idris.rst  index.rst
docs/general/: hello-world-compile-run.rst  index.rst  install.rst  tail-call-optimization.rst
docs/overview/: index.rst
docs/source/: conf.py
docs/source/ffi/: calling-idris-from-java.rst  calling-java-from-idris.rst
docs/source/general/: index.rst
docs/source/tail-call-optimization/: index.rst  self-mutual-tail-recursion.rst  self-tail-recursion.rst
docs/tail-call-optimization/: mutual-tail-recursion.rst
idris-jvm-assembler/: pom.xml
idris-jvm-codegen-launcher/: pom.xml
idris-jvm-codegen-launcher/src/assembly/: bin.xml
idris-jvm-compiler/: pom.xml
idris-jvm-compiler/src/assembly/: bin.xml
idris-jvm-core/: pom.xml
idris-jvm-ffi/: pom.xml
idris-jvm-hs/: README.md  idris-jvm.cabal
idris-jvm-hs/app/: Main.hs
idris-jvm-hs/docs/: setup.md
idris-jvm-hs/src/IdrisJvm/Codegen/: Common.hs  Constant.hs  ControlFlow.hs  Function.hs  Operator.hs  Types.hs
idris-jvm-hs/test/IdrisJvm/: CodegenJvmSpec.hs
idris-jvm-hs/test/tests/effects/: effects.idr
idris-jvm-hs/test/tests/ffi/: expected
idris-jvm-hs/test/tests/forkpar/: expected  forkpar.idr
idris-jvm-integration-test/: pom.xml
idris-jvm-io/: pom.xml
idris-jvm-ir/: pom.xml
idris-jvm-runtime/: pom.xml
idris-jvm-server/: pom.xml
idris-jvm-tests/: pom.xml
include/: asm.h
jvm-assembler/: pom.xml
jvm-assembler/src/assembly/: bin.xml
libs/base/: System.idr  base.ipkg
libs/base/Data/: Buffer.idr  Strings.idr
libs/base/Debug/: Trace.idr
libs/base/Java/: Lang.idr  Util.idr
libs/base/System/: Clock.idr  Concurrency.idr  Directory.idr  Errno.idr  FFI.idr  File.idr  Info.idr  Term.idr
libs/contrib/System/: Future.idr  Random.idr
libs/network/Network/: FFI.idr  Socket.idr
libs/prelude/: PrimIO.idr
libs/prelude/Prelude/: IO.idr  Types.idr
libs/test/Test/: Golden.idr
profiling/: README.md  compare.py  jfr_report.py  profile-build.sh
runtime/: idris-jvm-runtime.ipkg  pom.xml
runtime/IdrisJvm/: FFI.idr  IO.idr
runtime/Java/: Lang.idr  Math.idr  Util.idr
setup/: LICENSE  setup.cabal
setup/app/: Main.hs
src/Compiler/: Common.idr  TailRec.idr
src/Compiler/ES/: Codegen.idr
src/Compiler/Jvm/: Asm.idr  Codegen.idr  Export.idr  ExtPrim.idr  Foreign.idr  FunctionTree.idr  InferredType.idr  Jname.idr  Math.idr  MockAsm.idr  Optimizer.idr  ShowUtil.idr  Tree.idr  Tuples.idr  Variable.idr
src/Core/: Context.idr  Core.idr  Options.idr  Primitives.idr  TT.idr  TTC.idr
src/Core/Binary/: Prims.idr
src/Core/Context/: Context.idr
src/Core/TT/: Primitive.idr
src/Idris/: Driver.idr  Package.idr  ProcessIdr.idr  REPL.idr
src/Idris/IDEMode/: REPL.idr
src/IdrisJvm/: Assembler.hs  AssemblerService.hs  CodegenJvm.hs
src/IdrisJvm/Codegen/: Assembler.hs  Common.hs  Constant.hs  ControlFlow.hs  Foreign.hs  Function.hs  Operator.hs  Types.hs
src/Libraries/Utils/: Binary.idr  Term.idr
src/TTImp/: ProcessType.idr
src/Utils/: Binary.idr  Term.idr
test/: HLint.hs
test/IdrisJvm/: CodegenJvmSpec.hs
test/resources/basic/: basic.idr  expected
test/resources/ffi/: expected  ffi.idr
test/resources/forkpar/: forkpar.idr
test/resources/helloworld/: expected  helloworld.idr
test/resources/pythag/: pythag.idr
test/resources/trampoline/: trampoline.idr
test/tests/basic/: basic.idr  expected
test/tests/ffi/: expected  ffi.idr
test/tests/forkpar/: forkpar.idr
test/tests/tailrec/: tailrec.idr
tests/: Main.idr  Makefile  pom.xml
tests/idris2/basic044/: expected
tests/idris2/basic046/: expected
tests/idris2/basic053/: UnderscoredIntegerLiterals.idr  expected
tests/idris2/basic055/: BitOps.idr  expected
tests/idris2/coverage018/: expected
tests/idris2/error016/: expected
tests/idris2/evaluator002/: expected
tests/idris2/evaluator003/: expected
tests/idris2/evaluator004/: expected
tests/idris2/interactive010/: IEdit.idr
(+705 files in other folders)
